--- a/magisterka.tex
+++ b/magisterka.tex
@@ -1,5 +1,10 @@
 \documentclass[brudnopis,xodstep]{xmgr}
 
+%\defaultfontfeatures{Scale=MatchLowercase}
+\setmainfont[Mapping=tex-text]{Minion Pro:+onum}
+\setsansfont[Mapping=tex-text]{Myriad Pro}
+\setmonofont{Monaco}
+
 \author   {Walenty Szczęsny}
 \nralbumu {100\,001}
 \email    {walenty@szczesny.com.pl}
@@ -42,6 +47,13 @@ komputerowo całkowicie wyeliminował stosowanie tradycyjnych technik
 drukarskich, to podobny proces w~przypadku publikacji elektronicznych
 czyli publikacji, które w~ogóle nie wykorzystują papieru, a~nośnikem
 informacji staje się ekran komputera nie jest obserwowany.
+
+\begin{verbatim}
+%\defaultfontfeatures{Scale=MatchLowercase}
+\setmainfont[Mapping=tex-text]{Minion Pro:+onum}
+\setsansfont[Mapping=tex-text]{Myriad Pro}
+\setmonofont{Monaco
+\end{verbatim}
 
 Formatowanie wizualne, powstało z~myślą o~przygotowaniu publikacji do
 druku i~dlatego nie może sprostać nowym potrzebom, które stwarza
