--- a/magisterka.tex
+++ b/magisterka.tex
@@ -3,7 +3,7 @@
 %\defaultfontfeatures{Scale=MatchLowercase}
 \setmainfont[Mapping=tex-text]{Minion Pro:+onum}
 \setsansfont[Mapping=tex-text]{Myriad Pro}
-\setmonofont{Monaco}
+\setmonofont[Scale=0.75,Colour=880000]{Monaco}
 
 \author   {Walenty Szczęsny}
 \nralbumu {100\,001}
@@ -52,7 +52,7 @@ informacji staje się ekran komputera nie jest obserwowany.
 %\defaultfontfeatures{Scale=MatchLowercase}
 \setmainfont[Mapping=tex-text]{Minion Pro:+onum}
 \setsansfont[Mapping=tex-text]{Myriad Pro}
-\setmonofont{Monaco
+\setmonofont[Scale=0.75,Colour=880000]{Monaco}
 \end{verbatim}
 
 Formatowanie wizualne, powstało z~myślą o~przygotowaniu publikacji do
