dodano szablon: bibtex

--- a/szablony/bibtex/szablon.tex
+++ b/szablony/bibtex/szablon.tex
@@ -2,10 +2,10 @@
 %
 % kompilacja:
 %
-%   xelatex szablon-bib
-%   bibtex  szablon-bib
-%   xelatex szablon-bib
-%   xelatex szablon-bib
+%   xelatex szablon
+%   bibtex  szablon
+%   xelatex szablon
+%   xelatex szablon
 
 % tak można zmienić domyślną rodzinę fontów Latin Modern 
 %   na Minion + Myriad + Monaco:
@@ -21,7 +21,7 @@
 \email    {login@inf.ug.edu.pl}
 
 \title    {Tytuł pracy}
-\date     {2100}
+\date     {????}
 \miejsce  {Gdańsk}
 
 \opiekun  {prof. dr hab. D. Htunk}
@@ -42,7 +42,9 @@
 \introduction
 
 Jak pisać pracę magisterską?
+
 \url{http://sinatra.inf.ug.edu.pl/seminarium/info/jak-pisac}
+
 
 \chapter{Tytuł rozdziału}
 
