dodano szablon: amsref

--- a/szablony/amsrefs/szablon.tex
+++ b/szablony/amsrefs/szablon.tex
@@ -3,8 +3,8 @@
 %
 % kompilacja:
 %
-%   xelatex szablon-amsrefs
-%   xelatex szablon-amsrefs
+%   xelatex szablon
+%   xelatex szablon
 
 % tak można zmienić domyślną rodzinę fontów Latin Modern 
 %   na Minion + Myriad:
@@ -20,7 +20,7 @@
 \email    {login@inf.ug.edu.pl}
 
 \title    {Tytuł pracy}
-\date     {2100}
+\date     {????}
 \miejsce  {Gdańsk}
 
 \opiekun  {prof. dr hab. D. Htunk}
@@ -40,11 +40,11 @@
 % wstęp
 \introduction
 
-Jak pisać pracę magisterską:
-\url{http://sinatra.inf.ug.edu.pl/seminarium/info/jak-pisac}?
+Jak pisać pracę magisterską?
 
-Dokumentację pakietu \emph{amsref}
-można znaleźć tutaj:
+\url{http://sinatra.inf.ug.edu.pl/seminarium/info/jak-pisac}.
+
+Dokumentację pakietu \emph{amsref} można znaleźć tutaj:
 \url{http://www.ctan.org/tex-archive/macros/latex/contrib/amsrefs/}.
 
 \chapter{Tytuł rozdziału}
