--- a/szablony/bibtex/literatura.bib
+++ b/szablony/bibtex/literatura.bib
@@ -1,10 +1,10 @@
 %%% Skróty
 
-%%% Czasopisma:
+%%% czasopisma:
 
 @String{j-LECT-NOTES-COMP-SCI   = "Lecture Notes in Computer Science"}
 
-%%% Wydawcy:
+%%% wydawcy:
 
 @String{pub-PH                  = "Pren{\-}tice-Hall"}
 @String{pub-PH:adr              = "Englewood Cliffs, NJ 07632, USA"}
@@ -39,20 +39,4 @@
   year =         "2002",
   bibdate =      "Mon Jan 12 07:43:34 MST 2004",
   bibsource =    "http://portal.acm.org/",
-}
-
-@Article{Elmasri:2002:CMC,
-  author =       "Ramez Elmasri and Yu-Chi Wu and Babak Hojabri and
-                 Charley Li and Jack Fu",
-  title =        "Conceptual Modeling for Customized {XML} Schemas",
-  journal =      j-LECT-NOTES-COMP-SCI,
-  volume =       "2503",
-  pages =        "429--??",
-  year =         "2002",
-  CODEN =        "LNCSD9",
-  ISSN =         "0302-9743",
-  bibdate =      "Sat Nov 30 20:57:43 MST 2002",
-  bibsource =    "http://link.springer-ny.com/link/service/series/0558/tocs/t2503.htm",
-  URL =          "http://link.springer.de/link/service/series/0558/bibs/2503/25030429.htm;
-                 http://link.springer.de/link/service/series/0558/papers/2503/25030429.pdf",
 }
