usunięto opcję +onum (bug w implementacji \setmainfont)

--- a/magisterka.tex
+++ b/magisterka.tex
@@ -1,9 +1,9 @@
 \documentclass[brudnopis]{xmgr}
 
 %\defaultfontfeatures{Scale=MatchLowercase}
-\setmainfont[Mapping=tex-text]{Minion Pro:+onum}
+\setmainfont[Mapping=tex-text]{Minion Pro}
 \setsansfont[Mapping=tex-text]{Myriad Pro}
-\setmonofont[Scale=0.75]{Monaco}
+%\setmonofont[Scale=0.75]{Monaco}
 
 % Opcjonalnie identyfikator dokumentu 
 % drukowany tylko z włączoną opcją 'brudnopis':
